further code cleaning

--- a/Notebooks/Cell tracking processing pipeline.ipynb
+++ b/Notebooks/Cell tracking processing pipeline.ipynb
@@ -271,7 +271,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "from matplotlib.patches import Circle\n"
+    "from matplotlib.patches import Circle"
    ]
   },
   {
@@ -335,7 +335,6 @@
     "# add axis labels and legend\n",
     "ax.set_xlabel('X Position')\n",
     "ax.set_ylabel('Y Position')\n",
-    "#plt.title(\"Fatbody cell tracks\")\n",
     "plt.show()"
    ]
   },
@@ -560,7 +559,6 @@
    "outputs": [],
    "source": [
     "def angle_binning(trajectory):\n",
-    "        # Weaver's paper spatial binning: 0-35,35-70,70-140,140-250,250-360,360-500; 20, 60, 100, 140, 180,220, \n",
     "        theta_pos = trajectory[(trajectory['theta'] >= 0)]\n",
     "        theta_neg = trajectory[(trajectory['theta'] < 0)]\n",
     "\n",
@@ -603,7 +601,6 @@
     "# add axis labels and legend\n",
     "ax.set_xlabel('X Position')\n",
     "ax.set_ylabel('Y Position')\n",
-    "#plt.title(\"Fatbody cell tracks\")\n",
     "plt.show()"
    ]
   },
@@ -634,18 +631,7 @@
     "# add axis labels and legend\n",
     "ax.set_xlabel('X Position')\n",
     "ax.set_ylabel('Y Position')\n",
-    "#plt.title(\"Fatbody cell tracks\")\n",
     "plt.show()"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "# simulate the half wound and then predict, quadrants \n",
-    "# Iso-surfaces "
    ]
   }
  ],
