--- a/Notebooks/Observed bias visualisation.ipynb
+++ b/Notebooks/Observed bias visualisation.ipynb
@@ -160,7 +160,7 @@
     "ax[0].legend(loc='upper right')\n",
     "\n",
     "fig.text(0.04, 0.5, 'Observed bias', va='center', rotation='vertical', size = 'large')\n",
-    "plt.savefig(\"Observed bias control & mcr_new_data_1.pdf\")\n",
+    "plt.savefig(\"Figures/Observed bias control & mcr_new_data_1.pdf\")\n",
     "plt.show()"
    ]
   },
@@ -203,7 +203,7 @@
     "# concvert to DataFrame to save as spreadsheet\n",
     "Observed_bias_control = pd.DataFrame(obs_bias_control)\n",
     "Observed_bias_control.columns = [\"Mean\", \"Stdev\"]\n",
-    "Observed_bias_control.to_excel(\"Observed_bias_control.xlsx\")"
+    "Observed_bias_control.to_excel(\"Exports/Observed_bias_control.xlsx\")"
    ]
   },
   {
@@ -244,7 +244,7 @@
     "# concvert to DataFrame to save as spreadsheet\n",
     "Observed_bias_mcr = pd.DataFrame(obs_bias_mcr)\n",
     "Observed_bias_mcr.columns = [\"Mean\", \"Stdev\"]\n",
-    "Observed_bias_mcr.to_excel(\"Observed_bias_mcr.xlsx\")"
+    "Observed_bias_mcr.to_excel(\"Exports/Observed_bias_mcr.xlsx\")"
    ]
   },
   {
@@ -273,7 +273,7 @@
     "plt.ylim(0,0.5)\n",
     "plt.xlabel(\"distance ($\\mu$m)\")\n",
     "plt.ylabel(\"observed bias\")\n",
-    "plt.savefig(\"Observed_bias_control.pdf\")\n",
+    "plt.savefig(\"Figures/Observed_bias_control.pdf\")\n",
     "\n",
     "plt.show()"
    ]
@@ -304,7 +304,7 @@
     "plt.ylim(0,0.5)\n",
     "plt.xlabel(\"distance ($\\mu$m)\")\n",
     "plt.ylabel(\"observed bias\")\n",
-    "plt.savefig(\"Observed_bias_mcr.pdf\")\n",
+    "plt.savefig(\"Figures/Observed_bias_mcr.pdf\")\n",
     "plt.show()"
    ]
   },
