computing posterior modes with KDE

--- a/Notebooks/Diffusion Plots.ipynb
+++ b/Notebooks/Diffusion Plots.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 25,
    "id": "d2133832",
    "metadata": {},
    "outputs": [],
@@ -17,29 +17,29 @@
     "import numpy as np\n",
     "import pandas as pd\n",
     "from scipy.special import expi\n",
-    "from scipy.stats import mode\n",
+    "from scipy.stats import gaussian_kde\n",
     "import random\n",
     "#from Utilities.plotting import plot_find_wound_location,plotxy_space_bins,plotxy_time_bins,observed_bias_plotting"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 2,
    "id": "51d7c74e",
    "metadata": {},
    "outputs": [],
    "source": [
     "# Load inferred parameters for each data type \n",
     "Post_attractant_control = np.load(\"../data/New_data/Attractant_control.npy\", allow_pickle=True)\n",
-    "Post_attractant_mcr = np.load(\"../data/New_data/Attractant_post_mcr.npy\", allow_pickle=True)\n",
+    "# Post_attractant_mcr = np.load(\"../data/New_data/Attractant_post_mcr.npy\", allow_pickle=True)\n",
     "\n",
-    "posterior_samples_mcr = Post_attractant_mcr[0].get_chain(discard=5000, thin=10, flat = True)\n",
+    "# posterior_samples_mcr = Post_attractant_mcr[0].get_chain(discard=5000, thin=10, flat = True)\n",
     "posterior_samples_control = Post_attractant_control[0].get_chain(discard=5000, thin=10, flat = True)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 3,
    "id": "33f606e9",
    "metadata": {},
    "outputs": [],
@@ -62,7 +62,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 26,
    "id": "600f706b",
    "metadata": {},
    "outputs": [],
@@ -97,44 +97,48 @@
     "        source_strength = flow_rate / len(xs)\n",
     "    else:\n",
     "        source_strength = flow_rate # don't adjust wound strength for two wounds!\n",
-    "    return source_strength"
+    "    return source_strength\n",
+    "\n",
+    "def kde_mode(values):\n",
+    "    pdf_estimate = gaussian_kde(values)\n",
+    "    return values[np.argmax(pdf_estimate.pdf(values))]"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 28,
    "id": "933acd08",
    "metadata": {},
    "outputs": [],
    "source": [
     "# extract mean parameters from Posterior distributions, i.e. Diffusion coefficient, flow rate, tau \n",
-    "D_mean_control = np.mean(posterior_samples_control[:,1])\n",
-    "q_mean_control = np.mean(posterior_samples_control[:,0]) \n",
-    "tau_mean_control = np.mean(posterior_samples_control[:,2]) \n",
+    "D_control = kde_mode(posterior_samples_control[:,1])\n",
+    "q_control = kde_mode(posterior_samples_control[:,0]) \n",
+    "tau_control = kde_mode(posterior_samples_control[:,2]) \n",
     "\n",
-    "D_mean_mcr = np.mean(posterior_samples_mcr[:,1])\n",
-    "q_mean_mcr = np.mean(posterior_samples_mcr[:,0]) \n",
-    "tau_mean_mcr = np.mean(posterior_samples_mcr[:,2]) "
+    "# D_mcr = np.mean(posterior_samples_mcr[:,1])\n",
+    "# q_mean_mcr = np.mean(posterior_samples_mcr[:,0]) \n",
+    "# tau_mean_mcr = np.mean(posterior_samples_mcr[:,2]) "
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 29,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "(394.89495145898155, 556.7590622326513, 19.13326776868955)"
+       "(276.4858270194727, 418.6718038175409, 18.942193442567607)"
       ]
      },
-     "execution_count": 9,
+     "execution_count": 29,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "D_mean_control, q_mean_control, tau_mean_control"
+    "D_control, q_control, tau_control"
    ]
   },
   {
@@ -171,12 +175,12 @@
     "\n",
     "# Define the positions of the point sources\n",
     "source_locations = location_of_sources(halfwound_on)\n",
-    "source_strength = strength_of_sources(halfwound_on, q_mean_control)\n",
+    "source_strength = strength_of_sources(halfwound_on, q_control)\n",
     "# Set the values of ts, D, and tau\n",
     "ts = 20 # current time - min\n",
     "\n",
     "# Calculate the concentration at each point in the grid\n",
-    "concentration = concentration_multiple_sources(X, Y, ts, source_locations, source_strength, D_mean_control, tau_mean_control)\n",
+    "concentration = concentration_multiple_sources(X, Y, ts, source_locations, source_strength, D_control, tau_control)\n",
     "levels = np.linspace(concentration.min(),concentration.max(), 20)\n",
     "\n",
     "# plotting \n",
@@ -226,7 +230,7 @@
     "wound_edge_indices = [next(i for i, x in enumerate(distance) if x>-30), next(i for i, x in enumerate(distance) if x>30)]\n",
     "color_list = ['tab:blue', 'tab:orange', 'tab:green']\n",
     "for i, ts in enumerate([10, 20]):\n",
-    "    concentration_half = concentration_multiple_sources(X, Y, ts, source_locations, source_strength,D_mean_control, tau_mean_control)\n",
+    "    concentration_half = concentration_multiple_sources(X, Y, ts, source_locations, source_strength,D_control, tau_control)\n",
     "    absolute_concentration_grad = np.absolute(np.gradient(concentration_half[:,500]))\n",
     "    plt.plot(distance[:wound_edge_indices[0]],absolute_concentration_grad[:wound_edge_indices[0]],color_list[i])\n",
     "    plt.plot(distance[wound_edge_indices[1]:],absolute_concentration_grad[wound_edge_indices[1]:],color_list[i],label=str(ts)+' min')\n",
@@ -249,7 +253,7 @@
     "# plot muliple lines for different samples from the posterior distribution\n",
     "multi_gradients = []\n",
     "for i in range(10):\n",
-    "    concentration_half = concentration_multiple_sources(X, Y, 5, source_locations, source_strength,random.choice(posterior_samples_control[:,1]), tau_mean_control)\n",
+    "    concentration_half = concentration_multiple_sources(X, Y, 5, source_locations, source_strength,random.choice(posterior_samples_control[:,1]), tau_control)\n",
     "    multi_gradients.append(np.absolute(np.gradient(concentration_half[:,500])))"
    ]
   },
@@ -287,11 +291,11 @@
    "source": [
     "# Save data for two wound plots into spreadsheet\n",
     "source_locations2 = location_of_sources(False)\n",
-    "source_strength2 = strength_of_sources(False,q_mean_control)\n",
+    "source_strength2 = strength_of_sources(False,q_control)\n",
     "\n",
-    "concentration_3 = concentration_multiple_sources(X, Y, 3, source_locations2, source_strength2, D_mean_control, tau_mean_control)\n",
-    "concentration_10 = concentration_multiple_sources(X, Y, 10, source_locations2, source_strength2, D_mean_control, tau_mean_control)\n",
-    "concentration_20 = concentration_multiple_sources(X, Y, 20, source_locations2, source_strength2, D_mean_control, tau_mean_control)\n",
+    "concentration_3 = concentration_multiple_sources(X, Y, 3, source_locations2, source_strength2, D_control, tau_control)\n",
+    "concentration_10 = concentration_multiple_sources(X, Y, 10, source_locations2, source_strength2, D_control, tau_control)\n",
+    "concentration_20 = concentration_multiple_sources(X, Y, 20, source_locations2, source_strength2, D_control, tau_control)\n",
     "\n",
     "tws = {\"1 Minute\":np.gradient(concentration_1[375:625,500]), \"18 Minutes\": np.gradient(concentration_18[375:625,500]), \"20 Minutes\": np.gradient(concentration_20[375:625,500]) }\n",
     "\n",
@@ -341,9 +345,9 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "concentration_half_1 = concentration_multiple_sources(X, Y, 1, source_locations, source_strength, D_mean_control, tau_mean_control)\n",
-    "concentration_half_18 = concentration_multiple_sources(X, Y, 18, source_locations, source_strength, D_mean_control, tau_mean_control)\n",
-    "concentration_half_20 = concentration_multiple_sources(X, Y, 20, source_locations, source_strength, D_mean_control, tau_mean_control)\n",
+    "concentration_half_1 = concentration_multiple_sources(X, Y, 1, source_locations, source_strength, D_control, tau_control)\n",
+    "concentration_half_18 = concentration_multiple_sources(X, Y, 18, source_locations, source_strength, D_control, tau_control)\n",
+    "concentration_half_20 = concentration_multiple_sources(X, Y, 20, source_locations, source_strength, D_control, tau_control)\n",
     "\n",
     "c = {'Time = 1': np.absolute(concentration_half_1[:,500]), 'Time = 18': np.absolute(concentration_half_18[:,500]), 'Time = 20':np.absolute(concentration_half_20[:,500])}\n",
     "Concentrations = pd.DataFrame(data=c)"
