fixed units of time in Cell tracking processing pipeline_revision.ipynb

--- a/Notebooks/Cell tracking processing pipeline_revision.ipynb
+++ b/Notebooks/Cell tracking processing pipeline_revision.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 51,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -27,7 +27,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 23,
+   "execution_count": 52,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -50,7 +50,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 24,
+   "execution_count": 53,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -68,7 +68,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 26,
+   "execution_count": 54,
    "metadata": {},
    "outputs": [
     {
@@ -87,7 +87,7 @@
        " (221.4, 350.919)]"
       ]
      },
-     "execution_count": 26,
+     "execution_count": 54,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -98,7 +98,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 27,
+   "execution_count": 55,
    "metadata": {},
    "outputs": [
     {
@@ -127,13 +127,13 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 28,
+   "execution_count": 56,
    "metadata": {},
    "outputs": [],
    "source": [
     "# Preprocessing dataframe to make it cleaner to use \n",
     "def preprocess(df):\n",
-    "    df.drop(['/@frameInterval','/@frameInterval/#agg','/@from','/@nTracks/#agg','/@generationDateTime','/particle/detection/@z'], axis = 1, inplace = True)\n",
+    "    df.drop(['/@frameInterval/#agg','/@from','/@nTracks/#agg','/@generationDateTime','/particle/detection/@z'], axis = 1, inplace = True)\n",
     "    df.rename(columns={'/particle/#id': 'Track_ID',\n",
     "                        '/particle/detection/@t': 't',\n",
     "                        '/particle/detection/@x': 'x',\n",
@@ -164,7 +164,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 29,
+   "execution_count": 57,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -174,7 +174,7 @@
     "    # adjust y position to Python standard from ImageJ \n",
     "    filtered_df['y'] = 565.688 - filtered_df['y'] \n",
     "    # Reset times to minutes\n",
-    "    filtered_df['t'] = filtered_df['t'].div(60) \n",
+    "    filtered_df['t'] = filtered_df['t']*filtered_df['/@frameInterval'].div(60)\n",
     "    # centre with respect to wound location\n",
     "    if isinstance(list_woundlocs[i][0], int) or isinstance(list_woundlocs[i][0], float): #single wound\n",
     "        filtered_df = centre_at_zero(filtered_df,list_woundlocs[i][0], 565.688-list_woundlocs[i][1], '_'+list_dflabels[i])\n",
@@ -186,7 +186,282 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 30,
+   "execution_count": 58,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>/@frameInterval</th>\n",
+       "      <th>/@nTracks</th>\n",
+       "      <th>/@spaceUnits</th>\n",
+       "      <th>/@timeUnits</th>\n",
+       "      <th>/particle/@nSpots</th>\n",
+       "      <th>Track_ID</th>\n",
+       "      <th>t</th>\n",
+       "      <th>x</th>\n",
+       "      <th>y</th>\n",
+       "      <th>r</th>\n",
+       "      <th>rotate-x</th>\n",
+       "      <th>rotate-y</th>\n",
+       "      <th>theta</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>0</th>\n",
+       "      <td>29.929583</td>\n",
+       "      <td>302</td>\n",
+       "      <td>micron</td>\n",
+       "      <td>sec</td>\n",
+       "      <td>45</td>\n",
+       "      <td>1_c1</td>\n",
+       "      <td>0.000000</td>\n",
+       "      <td>277.937138</td>\n",
+       "      <td>-158.504439</td>\n",
+       "      <td>319.957356</td>\n",
+       "      <td>308.610799</td>\n",
+       "      <td>84.451671</td>\n",
+       "      <td>0.267112</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1</th>\n",
+       "      <td>29.929583</td>\n",
+       "      <td>302</td>\n",
+       "      <td>micron</td>\n",
+       "      <td>sec</td>\n",
+       "      <td>45</td>\n",
+       "      <td>1_c1</td>\n",
+       "      <td>0.498826</td>\n",
+       "      <td>278.101024</td>\n",
+       "      <td>-158.781968</td>\n",
+       "      <td>320.237244</td>\n",
+       "      <td>308.922926</td>\n",
+       "      <td>84.371313</td>\n",
+       "      <td>0.266612</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2</th>\n",
+       "      <td>29.929583</td>\n",
+       "      <td>302</td>\n",
+       "      <td>micron</td>\n",
+       "      <td>sec</td>\n",
+       "      <td>45</td>\n",
+       "      <td>1_c1</td>\n",
+       "      <td>0.997653</td>\n",
+       "      <td>277.620413</td>\n",
+       "      <td>-159.121442</td>\n",
+       "      <td>319.988636</td>\n",
+       "      <td>308.823127</td>\n",
+       "      <td>83.791426</td>\n",
+       "      <td>0.264946</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>3</th>\n",
+       "      <td>29.929583</td>\n",
+       "      <td>302</td>\n",
+       "      <td>micron</td>\n",
+       "      <td>sec</td>\n",
+       "      <td>45</td>\n",
+       "      <td>1_c1</td>\n",
+       "      <td>1.496479</td>\n",
+       "      <td>277.566471</td>\n",
+       "      <td>-158.661848</td>\n",
+       "      <td>319.713510</td>\n",
+       "      <td>308.460003</td>\n",
+       "      <td>84.078265</td>\n",
+       "      <td>0.266110</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>4</th>\n",
+       "      <td>29.929583</td>\n",
+       "      <td>302</td>\n",
+       "      <td>micron</td>\n",
+       "      <td>sec</td>\n",
+       "      <td>45</td>\n",
+       "      <td>1_c1</td>\n",
+       "      <td>1.995306</td>\n",
+       "      <td>277.590673</td>\n",
+       "      <td>-159.676425</td>\n",
+       "      <td>320.239196</td>\n",
+       "      <td>309.194531</td>\n",
+       "      <td>83.377965</td>\n",
+       "      <td>0.263397</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>...</th>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>13069</th>\n",
+       "      <td>29.929583</td>\n",
+       "      <td>302</td>\n",
+       "      <td>micron</td>\n",
+       "      <td>sec</td>\n",
+       "      <td>6</td>\n",
+       "      <td>301_c1</td>\n",
+       "      <td>23.943666</td>\n",
+       "      <td>10.828873</td>\n",
+       "      <td>-0.791235</td>\n",
+       "      <td>10.857742</td>\n",
+       "      <td>8.216657</td>\n",
+       "      <td>7.097682</td>\n",
+       "      <td>0.712461</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>13070</th>\n",
+       "      <td>29.929583</td>\n",
+       "      <td>302</td>\n",
+       "      <td>micron</td>\n",
+       "      <td>sec</td>\n",
+       "      <td>6</td>\n",
+       "      <td>301_c1</td>\n",
+       "      <td>24.442492</td>\n",
+       "      <td>9.546205</td>\n",
+       "      <td>-0.512170</td>\n",
+       "      <td>9.559934</td>\n",
+       "      <td>7.112345</td>\n",
+       "      <td>6.388027</td>\n",
+       "      <td>0.731798</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>13071</th>\n",
+       "      <td>29.929583</td>\n",
+       "      <td>302</td>\n",
+       "      <td>micron</td>\n",
+       "      <td>sec</td>\n",
+       "      <td>6</td>\n",
+       "      <td>301_c1</td>\n",
+       "      <td>24.941319</td>\n",
+       "      <td>9.790674</td>\n",
+       "      <td>0.130675</td>\n",
+       "      <td>9.791546</td>\n",
+       "      <td>6.830651</td>\n",
+       "      <td>7.015453</td>\n",
+       "      <td>0.798744</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>13072</th>\n",
+       "      <td>29.929583</td>\n",
+       "      <td>302</td>\n",
+       "      <td>micron</td>\n",
+       "      <td>sec</td>\n",
+       "      <td>2</td>\n",
+       "      <td>302_c1</td>\n",
+       "      <td>24.442492</td>\n",
+       "      <td>-80.469317</td>\n",
+       "      <td>7.660353</td>\n",
+       "      <td>80.833112</td>\n",
+       "      <td>-62.317087</td>\n",
+       "      <td>-51.483712</td>\n",
+       "      <td>-2.451104</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>13073</th>\n",
+       "      <td>29.929583</td>\n",
+       "      <td>302</td>\n",
+       "      <td>micron</td>\n",
+       "      <td>sec</td>\n",
+       "      <td>2</td>\n",
+       "      <td>302_c1</td>\n",
+       "      <td>24.941319</td>\n",
+       "      <td>-80.736055</td>\n",
+       "      <td>7.384675</td>\n",
+       "      <td>81.073078</td>\n",
+       "      <td>-62.310765</td>\n",
+       "      <td>-51.867258</td>\n",
+       "      <td>-2.447408</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "<p>13074 rows × 13 columns</p>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "       /@frameInterval  /@nTracks /@spaceUnits /@timeUnits  /particle/@nSpots  \\\n",
+       "0            29.929583        302       micron         sec                 45   \n",
+       "1            29.929583        302       micron         sec                 45   \n",
+       "2            29.929583        302       micron         sec                 45   \n",
+       "3            29.929583        302       micron         sec                 45   \n",
+       "4            29.929583        302       micron         sec                 45   \n",
+       "...                ...        ...          ...         ...                ...   \n",
+       "13069        29.929583        302       micron         sec                  6   \n",
+       "13070        29.929583        302       micron         sec                  6   \n",
+       "13071        29.929583        302       micron         sec                  6   \n",
+       "13072        29.929583        302       micron         sec                  2   \n",
+       "13073        29.929583        302       micron         sec                  2   \n",
+       "\n",
+       "      Track_ID          t           x           y           r    rotate-x  \\\n",
+       "0         1_c1   0.000000  277.937138 -158.504439  319.957356  308.610799   \n",
+       "1         1_c1   0.498826  278.101024 -158.781968  320.237244  308.922926   \n",
+       "2         1_c1   0.997653  277.620413 -159.121442  319.988636  308.823127   \n",
+       "3         1_c1   1.496479  277.566471 -158.661848  319.713510  308.460003   \n",
+       "4         1_c1   1.995306  277.590673 -159.676425  320.239196  309.194531   \n",
+       "...        ...        ...         ...         ...         ...         ...   \n",
+       "13069   301_c1  23.943666   10.828873   -0.791235   10.857742    8.216657   \n",
+       "13070   301_c1  24.442492    9.546205   -0.512170    9.559934    7.112345   \n",
+       "13071   301_c1  24.941319    9.790674    0.130675    9.791546    6.830651   \n",
+       "13072   302_c1  24.442492  -80.469317    7.660353   80.833112  -62.317087   \n",
+       "13073   302_c1  24.941319  -80.736055    7.384675   81.073078  -62.310765   \n",
+       "\n",
+       "        rotate-y     theta  \n",
+       "0      84.451671  0.267112  \n",
+       "1      84.371313  0.266612  \n",
+       "2      83.791426  0.264946  \n",
+       "3      84.078265  0.266110  \n",
+       "4      83.377965  0.263397  \n",
+       "...          ...       ...  \n",
+       "13069   7.097682  0.712461  \n",
+       "13070   6.388027  0.731798  \n",
+       "13071   7.015453  0.798744  \n",
+       "13072 -51.483712 -2.451104  \n",
+       "13073 -51.867258 -2.447408  \n",
+       "\n",
+       "[13074 rows x 13 columns]"
+      ]
+     },
+     "execution_count": 58,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "list_dfs_filtered[0]"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 59,
    "metadata": {},
    "outputs": [
     {
@@ -195,7 +470,7 @@
        "['mcr1', 'mcr2', 'mcr3', 'mcr4', 'mcr5']"
       ]
      },
-     "execution_count": 30,
+     "execution_count": 59,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -207,7 +482,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 31,
+   "execution_count": 60,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -239,7 +514,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 33,
+   "execution_count": 61,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -248,7 +523,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 35,
+   "execution_count": 62,
    "metadata": {},
    "outputs": [
     {
