modified Observed bias visualisation_revision.ipynb to also plot observed persistence values and some refactoring

--- a/Notebooks/Cell tracking processing pipeline_revision.ipynb
+++ b/Notebooks/Cell tracking processing pipeline_revision.ipynb
@@ -480,16 +480,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 209,
    "metadata": {},
    "outputs": [],
    "source": [
     "# Save the data to csv for processing the Inference pipeline\n",
     "singlewound_control_data = pd.concat(list_dfs_filtered[0:6]).reset_index()\n",
-    "singlewound_control_data.to_csv(filepath+'Single_wound/CTR_revision/Control_filtered_combined')\n",
+    "singlewound_control_data.to_csv(filepath+'Single_wound/CTR_revision/Control_filtered_combined.csv')\n",
     "\n",
     "singlewound_mcr_data = pd.concat(list_dfs_filtered[6:]).reset_index()\n",
-    "singlewound_mcr_data.to_csv(filepath+'Single_wound/MCR_revision/MCR_filtered_combined')\n",
+    "singlewound_mcr_data.to_csv(filepath+'Single_wound/MCR_revision/MCR_filtered_combined.csv')\n",
     "\n",
     "# halfwound_data = pd.concat(list_dfs_filtered[10:14]).reset_index()\n",
     "# # halfwound_data.to_csv(filepath+'Half_wound/Halfwound_filtered_combined')\n",
