Various changes in finalising plots for manuscript revision, commit before testing some alternative samplers

--- a/Notebooks/Cell tracking processing pipeline_revision.ipynb
+++ b/Notebooks/Cell tracking processing pipeline_revision.ipynb
@@ -498,10 +498,10 @@
     "singlewound_mcr_data.to_csv(filepath+'Single_wound/MCR_revision/MCR_filtered_combined.csv')\n",
     "\n",
     "halfwound_control_data = pd.concat(list_dfs_filtered[10:16]).reset_index()\n",
-    "halfwound_control_data.to_csv(filepath+'Half_wound/CTR_revision/Halfwound_CTR_filtered_combined')\n",
+    "halfwound_control_data.to_csv(filepath+'Half_wound/CTR_revision/Halfwound_CTR_filtered_combined.csv')\n",
     "\n",
     "halfwound_mcr_data = pd.concat(list_dfs_filtered[16:22]).reset_index()\n",
-    "halfwound_mcr_data.to_csv(filepath+'Half_wound/MCR_revision/Halfwound_MCR_filtered_combined')\n",
+    "halfwound_mcr_data.to_csv(filepath+'Half_wound/MCR_revision/Halfwound_MCR_filtered_combined.csv')\n",
     "\n",
     "# twowound_control_data = pd.concat(list_dfs_filtered[14:17]).reset_index()\n",
     "# # twowound_control_data.to_csv(filepath+'Two_wound_data/Control/Two_wound_Control_filtered_combined')\n",
